fix: move some properties to rem and changed to grid system for better layout disposition

--- a/frontend/app/common/Container.css
+++ b/frontend/app/common/Container.css
@@ -1,5 +1,7 @@
 #container {
-  padding: 24px 64px;
-  height: 100%;
-  max-width: 100%;
+  grid-area: container;
+  padding: 1.5rem 4rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+
 }
