--- a/frontend/app/common/Wrapper.css
+++ b/frontend/app/common/Wrapper.css
@@ -1,10 +1,11 @@
 #wrapper {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 4rem auto;
+  grid-template-rows: auto 1fr;
+  grid-template-areas: "sidebar container";
 
-  position: absolute;
-  top: 0;
+  height: 100%;
+  overflow: hidden;
 
   color: rgb(11, 36, 93);
-  font-family: 'Work Sans', sans-serif;
 }
