--- a/frontend/common/Wrapper.css
+++ b/frontend/common/Wrapper.css
@@ -7,5 +7,8 @@
   height: 100%;
   overflow: hidden;
 
-  color: rgb(11, 36, 93);
+  color: white;
+
+  padding: 1rem;
+  background-color: #141115;
 }
